tests/negative/runtime/remove_missing/input.ci
void main(string[] args) {
    remove("missing.txt");
}
